Day-70-Automated-TLS/5-secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-touch-svc
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: zero-touch-api
